@@ -16,12 +16,37 @@
 import copy
 
 from django.conf import settings
+from django.core.exceptions import ImproperlyConfigured
+from django.utils.importlib import import_module
 
 from saml2.config import SPConfig
 
 
-def config_settings_loader():
-    """Utility function to load the pysaml2 configuration"""
+def get_config_loader(path, request=None):
+    i = path.rfind('.')
+    module, attr = path[:i], path[i+1:]
+    try:
+        mod = import_module(module)
+    except ImportError, e:
+        raise ImproperlyConfigured('Error importing SAML config loader %s: "%s"' % (path, e))
+    except ValueError, e:
+        raise ImproperlyConfigured('Error importing SAML config loader. Is SAML_CONFIG_LOADER a correctly string with a callable path?')
+    try:
+        config_loader = getattr(mod, attr)
+    except AttributeError:
+        raise ImproperlyConfigured('Module "%s" does not define a "%s" config loader' % (module, attr))
+
+    if not hasattr(config_loader, '__call__'):
+        raise ImproperlyConfigured("SAML config loader must be a callable object.")
+
+    return config_loader(request)
+
+
+def config_settings_loader(request=None):
+    """Utility function to load the pysaml2 configuration.
+
+    This is also the default config loader.
+    """
     conf = SPConfig()
     conf.load(copy.deepcopy(settings.SAML_CONFIG))
     return conf
