@@ -40,7 +40,7 @@ from saml2.metadata import entity_descriptor
 
 from djangosaml2.cache import IdentityCache, OutstandingQueriesCache
 from djangosaml2.cache import StateCache
-from djangosaml2.conf import config_settings_loader
+from djangosaml2.conf import get_config_loader
 from djangosaml2.signals import post_authenticated
 
 
@@ -62,8 +62,13 @@ def get_custom_setting(name, default=None):
         return default
 
 
+DEFAULT_CONFIG_LOADER = get_custom_setting(
+    'SAML_CONFIG_LOADER',
+    'djangosaml2.conf.config_settings_loader',
+    )
+
 def login(request,
-          config_loader=config_settings_loader,
+          config_loader=DEFAULT_CONFIG_LOADER,
           wayf_template='djangosaml2/wayf.html',
           authorization_error_template='djangosaml2/auth_error.html'):
     """SAML Authorization Request initiator
@@ -83,7 +88,7 @@ def login(request,
                 }, context_instance=RequestContext(request))
 
     selected_idp = request.GET.get('idp', None)
-    conf = config_loader()
+    conf = get_config_loader(config_loader, request)
 
     # is a embedded wayf needed?
     idps = conf.idps()
@@ -123,7 +128,8 @@ DEFAULT_CREATE_UNKNOWN_USER = get_custom_setting('SAML_CREATE_UNKNOWN_USER',
 
 
 @csrf_exempt
-def assertion_consumer_service(request, config_loader=config_settings_loader,
+def assertion_consumer_service(request,
+                               config_loader=DEFAULT_CONFIG_LOADER,
                                attribute_mapping=DEFAULT_ATTRIBUTE_MAPPING,
                                create_unknown_user=DEFAULT_CREATE_UNKNOWN_USER):
     """SAML Authorization Response endpoint
@@ -136,7 +142,8 @@ def assertion_consumer_service(request, config_loader=config_settings_loader,
     """
     logger.debug('Assertion Consumer Service started')
 
-    conf = config_loader()
+    conf = get_config_loader(config_loader, request)
+
     post = {'SAMLResponse': request.POST['SAMLResponse']}
     client = Saml2Client(conf, identity_cache=IdentityCache(request.session),
                          logger=logger)
@@ -183,11 +190,13 @@ def assertion_consumer_service(request, config_loader=config_settings_loader,
 
 @login_required
 def echo_attributes(request,
-                    config_loader=config_settings_loader,
+                    config_loader=DEFAULT_CONFIG_LOADER,
                     template='djangosaml2/echo_attributes.html'):
     """Example view that echo the SAML attributes of an user"""
     state = StateCache(request.session)
-    client = Saml2Client(config_loader(), state_cache=state,
+    conf = get_config_loader(config_loader, request)
+
+    client = Saml2Client(conf, state_cache=state,
                          identity_cache=IdentityCache(request.session),
                          logger=logger)
     subject_id = _get_subject_id(request.session)
@@ -198,7 +207,7 @@ def echo_attributes(request,
 
 
 @login_required
-def logout(request, config_loader=config_settings_loader):
+def logout(request, config_loader=DEFAULT_CONFIG_LOADER):
     """SAML Logout Request initiator
 
     This view initiates the SAML2 Logout request
@@ -206,7 +215,9 @@ def logout(request, config_loader=config_settings_loader):
     """
     logger.debug('Logout process started')
     state = StateCache(request.session)
-    client = Saml2Client(config_loader(), state_cache=state,
+    conf = get_config_loader(config_loader, request)
+
+    client = Saml2Client(conf, state_cache=state,
                          identity_cache=IdentityCache(request.session),
                          logger=logger)
     subject_id = _get_subject_id(request.session)
@@ -217,7 +228,7 @@ def logout(request, config_loader=config_settings_loader):
     return HttpResponseRedirect(headers['Location'])
 
 
-def logout_service(request, config_loader=config_settings_loader,
+def logout_service(request, config_loader=DEFAULT_CONFIG_LOADER,
                    next_page=None):
     """SAML Logout Response endpoint
 
@@ -229,7 +240,8 @@ def logout_service(request, config_loader=config_settings_loader,
     request started by another SP.
     """
     logger.debug('Logout service started')
-    conf = config_loader()
+    conf = get_config_loader(config_loader, request)
+
     state = StateCache(request.session)
     client = Saml2Client(conf, state_cache=state,
                          identity_cache=IdentityCache(request.session),
@@ -270,12 +282,12 @@ def logout_service(request, config_loader=config_settings_loader,
 
 DEFAULT_VALID_FOR = get_custom_setting('SAML_VALID_FOR', 24)
 
-def metadata(request, config_loader=config_settings_loader,
+def metadata(request, config_loader=DEFAULT_CONFIG_LOADER,
              valid_for=DEFAULT_VALID_FOR):
     """Returns an XML with the SAML 2.0 metadata for this
     SP as configured in the settings.py file.
     """
-    conf = config_loader()
+    conf = get_config_loader(config_loader, request)
     metadata = entity_descriptor(conf, valid_for)
     return HttpResponse(content=str(metadata),
                         content_type="text/xml; charset=utf8")
